@@ -1,3 +1,4 @@
+* Add contact_mechanism_get
 * Add name to contact mechanism
 * Improve distinction of address record name
 
